--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # env
-# /server/env.js.dist
+/server/env.js.dist
 /server/env.js
-# /src/env.js.dist
+/src/env.js.dist
 /src/env.js
